# wazo_calld_queue/plugin.py
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright 2018-2020 The Wazo Authors  (see the AUTHORS file)
+# Copyright 2018-2024 The Wazo Authors  (see the AUTHORS file)
 # SPDX-License-Identifier: GPL-3.0+
 
 from wazo_amid_client import Client as AmidClient
@@ -8,14 +8,14 @@ from wazo_confd_client import Client as ConfdClient
 from wazo_agentd_client import Client as AgentdClient
 
 from .resources import (
-    InterceptResource,
     QueuesResource,
     QueueResource,
     QueueAddMemberResource,
     QueueRemoveMemberResource,
     QueuePauseMemberResource,
     QueueLiveStatsResource,
-    QueueAgentsStatusResource
+    QueueAgentsStatusResource,
+    QueueWithdrawCallerResource
     )
 from .services import QueueService
 from .bus_consume import QueuesBusEventHandler
@@ -35,17 +35,11 @@ class Plugin(object):
         confd_client = ConfdClient(**config['confd'])
         agentd_client = AgentdClient(**config['agentd'])
 
-        # Get tenant_uuid from config file
-        try:
-            MY_TENANT = config['calld_queue_tenant_uuid']
-        except:
-            MY_TENANT = "00000000-0000-0000-0000-000000000000"
-
         token_changed_subscribe(amid_client.set_token)
         token_changed_subscribe(confd_client.set_token)
         token_changed_subscribe(agentd_client.set_token)
 
-        queues_bus_event_handler = QueuesBusEventHandler(bus_publisher, confd_client, agentd_client, MY_TENANT)
+        queues_bus_event_handler = QueuesBusEventHandler(bus_publisher, confd_client, agentd_client)
         queues_bus_event_handler.subscribe(bus_consumer)
 
         queues_service = QueueService(amid_client, confd_client, ari.client, agentd_client, queues_bus_event_handler)
@@ -57,4 +51,4 @@ class Plugin(object):
         api.add_resource(QueuePauseMemberResource, '/queues/<queue_name>/pause_member', resource_class_args=[queues_service])
         api.add_resource(QueueLiveStatsResource, '/queues/<queue_name>/livestats', resource_class_args=[queues_service])
         api.add_resource(QueueAgentsStatusResource, '/queues/agents_status', resource_class_args=[queues_service])
-        api.add_resource(InterceptResource, '/queues/intercept/<queue_name>', resource_class_args=[queues_service])
+        api.add_resource(QueueWithdrawCallerResource, '/queues/<queue_name>/withdraw', resource_class_args=[queues_service])
