# wazo_calld_queue/resources.py
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-# Copyright 2017 The Wazo Authors  (see the AUTHORS file)
+# Copyright 2017-2024 The Wazo Authors  (see the AUTHORS file)
 # SPDX-License-Identifier: GPL-3.0+
 
 
@@ -11,10 +11,10 @@ from wazo_calld.auth import required_acl
 from wazo_calld.http import AuthResource
 
 from .schema import (
-    intercept_schema,
     queue_list_schema,
     queue_schema,
     queue_member_schema,
+    queue_withdraw_schema,
 )
 
 
@@ -107,15 +107,15 @@ class QueueAgentsStatusResource(AuthResource):
 
         return result, 200
 
-class InterceptResource(AuthResource):
+class QueueWithdrawCallerResource(AuthResource):
 
     def __init__(self, queues_service):
         self._queues_service = queues_service
 
-    @required_acl('calld.queues.{queue_name}.intercept.create')
-    def post(self, queue_name):
+    @required_acl('calld.queues.{queue_name}.withdraw.create')
+    def put(self, queue_name):
         tenant = Tenant.autodetect()
         request_body = intercept_schema.load(request.get_json(force=True))
         result = self._queues_service.intercept_call(queue_name, request_body)
 
-        return result, 201
+        return result, 204
